# ancv

./: .bumpversion.cfg  .dockerignore  .gitignore  .pre-commit-config.yaml  .release-please-manifest.json  ARCHITECTURE.md  CHANGELOG.md  CNAME  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  devbox.json  lgtm.yml  pyproject.toml  release-please-config.json  requirements.txt  schema.json
.do/: app.yaml  deploy.template.yaml
.do/function/: project.yml
.do/functions/: project.yml
.github/: codecov.yml  dependabot.yml
.github/workflows/: build-and-push-image.yml  codeql-analysis.yml  poetry.yml  publish.yml  run-tests.yml
ancv/: CHANGELOG.md  __init__.py  __main__.py  exceptions.py  reflection.py  timing.py  typehelp.py
ancv/data/: showcase.resume.json  validation.py
ancv/data/models/: __init__.py  github.py  resume.py
ancv/utils/: exceptions.py  logging.py
ancv/visualization/: __init__.py  rendering.py  skeletons.py  templates.py  themes.py  translations.py
ancv/web/: __init__.py  client.py  server.py
self-hosting/: Caddyfile  docker-compose.yml
stubs/: README.md  humanize.pyi
tests/: __init__.py  conftest.py  test_cli.py  test_main.py  test_timing.py  test_validation.py
tests/data/: test_validation.py
tests/data/resumes/: full.json
tests/test_data/: README.md  showcase-output.txt
tests/test_data/expected-outputs/: full.resume.output.txt  partial.resume.output.txt  showcase.resume.output.txt
tests/test_data/resumes/: full.json  full.resume.json  partial.resume.json
tests/visualization/: conftest.py  test_date_ranges.py  test_templates.py  test_themes.py
tests/web/: conftest.py  test_client.py  test_server.py  test_web.py
