[project]
name = "ancv"
version = "1.5.1"
description = "Renders your (JSON) resume/CV for online & pretty terminal display"
authors = [{ name = "Alex Povel", email = "python@alexpovel.de" }]
readme = "README.md"
license = { file = "LICENSE" }
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Environment :: Web Environment",
    "Framework :: AnyIO",
    "Framework :: AsyncIO",
    "Framework :: Pytest",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Natural Language :: English",
    "Natural Language :: German",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Office/Business",
    "Topic :: System :: Shells",
    "Topic :: Terminals",
    "Topic :: Terminals :: Terminal Emulators/X Terminals",
    "Topic :: Text Processing",
    "Topic :: Text Processing :: Markup",
    "Typing :: Typed",
]
requires-python = ">=3.12"
dependencies = [
    "gidgethub>=5.3.0",
    "aiohttp>=3.10.10",
    "structlog>=24.4.0",
    "cachetools>=5.5.0",
    "humanize>=4.11.0",
    "rich>=13.9.3",
    "typer>=0.12.5",
    "babel>=2.16.0",
    "pydantic[email]>=2.9.2",
]

[project.urls]
Homepage = "https://ancv.io"
Repository = "https://github.com/alexpovel/ancv/"
Issues = "https://github.com/alexpovel/ancv/issues/"
Changelog = "https://github.com/alexpovel/ancv/blob/main/CHANGELOG.md"

[project.scripts]
ancv = "ancv.__main__:app"

[tool.uv]
dev-dependencies = [
    "datamodel-code-generator[http]>=0.26.2",
    "ipython>=8.28.0",
    "mypy>=1.13.0",
    "pydeps>=2.0.1",
    "pytest-aiohttp>=1.0.5",
    "pytest-cov>=5.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-rerunfailures>=14.0",
    "pytest>=8.3.3",
    "requests>=2.32.3",
    "types-babel>=2.11.0.15",
    "types-cachetools>=5.5.0.20240820",
]

[build-system]
requires = ["setuptools >= 75.0"]
build-backend = "setuptools.build_meta"

[tool.coverage.run]
branch = true

[tool.ruff.lint]
# `E501` is line length violation
ignore = ["E501"]

[tool.coverage.report]
fail_under = 80.0

[tool.datamodel-codegen]
target-python-version = "3.12"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.mypy]
mypy_path = "stubs/"
show_error_codes = true
strict = true
namespace_packages = true
disallow_any_unimported = true
# Disable until https://github.com/python/mypy/issues/16454 fixed (inheriting from
# `Basemodel` gives ancv/visualization/translations.py:4: error: Explicit "Any" is not
# allowed  [misc])
disallow_any_explicit = false
disallow_any_generics = true
disallow_subclassing_any = true
disallow_untyped_defs = true
no_implicit_optional = true
check_untyped_defs = true
warn_return_any = true
warn_unused_ignores = true
