[project]
name = "ancv"
version = "1.5.3"
description = "Renders your (JSON) resume/CV for online & pretty terminal display"
authors = [{ name = "Alex Povel", email = "python@alexpovel.de" }]
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Environment :: Web Environment",
    "Framework :: AnyIO",
    "Framework :: AsyncIO",
    "Framework :: Pytest",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Natural Language :: English",
    "Natural Language :: German",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Office/Business",
    "Topic :: System :: Shells",
    "Topic :: Terminals",
    "Topic :: Terminals :: Terminal Emulators/X Terminals",
    "Topic :: Text Processing",
    "Topic :: Text Processing :: Markup",
    "Typing :: Typed",
]
requires-python = ">=3.13"
dependencies = [
    "gidgethub>=5,<6",
    "aiohttp>=3,<4",
    "structlog>=25,<26",
    "cachetools>=7,<8",
    "humanize>=4,<5",
    "rich>=15,<16",
    "typer>=0.25,<0.26",
    "babel>=2,<3",
    "pydantic[email]>=2,<3",
]

[project.urls]
Homepage = "https://ancv.povel.dev"
Repository = "https://github.com/alexpovel/ancv/"
Issues = "https://github.com/alexpovel/ancv/issues/"
Changelog = "https://github.com/alexpovel/ancv/blob/main/CHANGELOG.md"

[project.scripts]
ancv = "ancv.__main__:app"

[dependency-groups]
dev = [
    "datamodel-code-generator[http]>=0.56,<0.57",
    "ipython>=9,<10",
    "mypy>=1,<2",
    "pytest-aiohttp>=1,<2",
    "pytest-cov>=7,<8",
    "pytest-asyncio>=1,<2",
    "pytest-rerunfailures>=16,<17",
    "pytest>=9,<10",
    "requests>=2,<3",
    "ruff>=0.15,<0.16",
    "types-babel>=2,<3",
    "types-cachetools>=7,<8",
]

[build-system]
requires = ["setuptools >= 75.0"]
build-backend = "setuptools.build_meta"

[tool.coverage.run]
branch = true

[tool.ruff.lint]
# `E501` is line length violation
ignore = ["E501"]

[tool.coverage.report]
fail_under = 80.0

[tool.datamodel-codegen]
target-python-version = "3.13"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.mypy]
mypy_path = "stubs/"
show_error_codes = true
strict = true
namespace_packages = true
disallow_any_unimported = true
# Disable until https://github.com/python/mypy/issues/16454 fixed (inheriting from
# `Basemodel` gives ancv/visualization/translations.py:4: error: Explicit "Any" is not
# allowed  [misc])
disallow_any_explicit = false
disallow_any_generics = true
disallow_subclassing_any = true
disallow_untyped_defs = true
no_implicit_optional = true
check_untyped_defs = true
warn_return_any = true
warn_unused_ignores = true
